Address PR comments.